# kegelpy

./: README.md  pyproject.toml
src/kegelpy/: __about__.py  __main__.py  core.py  kegel.py  kegel_tui.py
