[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kegelpy"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jonnieey", email = "johnjahi55@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jonnieey/kegelpy#readme"
Issues = "https://github.com/jonnieey/kegelpy/issues"
Source = "https://github.com/jonnieey/kegelpy"

[tool.hatch.version]
path = "src/kegelpy/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kegelpy tests}"

[tool.coverage.run]
source_pkgs = ["kegelpy", "tests"]
branch = true
parallel = true
omit = [
  "src/kegelpy/__about__.py",
]

[tool.coverage.paths]
kegelpy = ["src/kegelpy", "*/kegelpy/src/kegelpy"]
tests = ["tests", "*/kegelpy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
