[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kegelpy"
dynamic = ["version"]
description = "A CLI Kegel exercise trainer with progressive levels"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "jonnieey", email = "johnjahi55@gmail.com" },
]
license = { text = "MIT" }
keywords = ["kegel", "exercise", "cli", "trainer", "fitness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "textual==6.11.0",
    "plotext==5.3.2",
    "textual-plotext==1.0.1"
]

[project.scripts]
kegelpy = "kegelpy.__main__:main"

[project.urls]
Documentation = "https://github.com/jonnieey/kegelpy#readme"
Issues = "https://github.com/jonnieey/kegelpy/issues"
Source = "https://github.com/jonnieey/kegelpy"

[tool.hatch.version]
path = "src/kegelpy/__about__.py"

[tool.hatch.build]
include = [
    "src/kegelpy/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kegelpy"]

[tool.coverage.run]
source = ["kegelpy"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]
